--- a/portfolio.html
+++ b/portfolio.html
@@ -28,12 +28,14 @@
         <a class="logo" href="#">Web<span class="color-tagb">Studio</span></a>
         <ul class="site-nav list">
           <li class="list-item">
-            <a href="./index.html" class="item ">Студія</a>
+            <a href="./index.html" class="item">Студія</a>
           </li>
           <li class="list-item">
             <a href="./portfolio.html" class="item current">Портфоліо</a>
           </li>
-          <li class="list-item"><a href="#" class="item">Контакти</a></li>
+          <li class="list-item">
+            <a href="./contacts.html" class="item">Контакти</a>
+          </li>
         </ul>
         <ul class="auth-nav list">
           <li class="auth-item">
@@ -78,98 +80,197 @@
             </li>
           </ul>
         </div>
-      <!-----------------pages ---------------->
+        <!-----------------pages ---------------->
         <div class="container">
           <ul class="gallery">
             <li class="example">
-              <img
-                src="./images/img-2-1.jpg"
-                alt="єкран ноутбуку"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Технокряк</h2>
-              <p class="options">Веб-сайт</p>
+              <a href="#">
+                <div class="overlay">
+                  <img
+                    src="./images/img-2-1.jpg"
+                    alt="єкран ноутбуку"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Технокряк</h2>
+                  <p class="options">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-2.jpg"
-                alt="постер боскетболістів"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Постер New Orlean vs Golden Star</h2>
-              <p class="options">Дизайн</p>
+              <a href="">
+                <div class="overlay">
+                  <img
+                    src="./images/img-2-2.jpg"
+                    alt="постер боскетболістів"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Постер New Orlean vs Golden Star</h2>
+                  <p class="options">Дизайн</p>
+                </div>
+              </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-3.jpg"
-                alt="лого ресторану"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Ресторан Seafood</h2>
-              <p class="options">Додаток</p>
+            <a href="">
+                <div class="overlay">
+                <img
+                  src="./images/img-2-3.jpg"
+                  alt="лого ресторану"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Ресторан Seafood</h2>
+                <p class="options">Додаток</p>
+              </div>
+            </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-4.jpg"
-                alt="навушники"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Проєкт Prime</h2>
-              <p class="options">Маркетинг</p>
+              <a href="">
+                <div class="overlay">
+                <img
+                  src="./images/img-2-4.jpg"
+                  alt="навушники"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Проєкт Prime</h2>
+                <p class="options">Маркетинг</p>
+              </div>
+              </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-5.jpg"
-                alt="пара коробок"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Проєкт Boxes</h2>
-              <p class="options">Додаток</p>
+          <a href="">
+                <div class="overlay">
+                <img
+                  src="./images/img-2-5.jpg"
+                  alt="пара коробок"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Проєкт Boxes</h2>
+                <p class="options">Додаток</p>
+              </div>
+          </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-6.jpg"
-                alt="монітор"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Inspiration has no Borders</h2>
-              <p class="options">Веб-сайт</p>
+           <a href="">
+               <div class="overlay">
+                <img
+                  src="./images/img-2-6.jpg"
+                  alt="монітор"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Inspiration has no Borders</h2>
+                <p class="options">Веб-сайт</p>
+              </div>
+           </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-7.jpg"
-                alt="розгорнута книга"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Видання Limited Edition</h2>
-              <p class="options">Дизайн</p>
+           <a href="">
+               <div class="overlay">
+                <img
+                  src="./images/img-2-7.jpg"
+                  alt="розгорнута книга"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Видання Limited Edition</h2>
+                <p class="options">Дизайн</p>
+              </div>
+           </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-8.jpg"
-                alt="лейбл "
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Проєкт LAB</h2>
-              <p class="options">Маркетинг</p>
+          <a href="">
+                <div class="overlay">
+                <img
+                  src="./images/img-2-8.jpg"
+                  alt="лейбл "
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Проєкт LAB</h2>
+                <p class="options">Маркетинг</p>
+              </div>
+          </a>
             </li>
             <li class="example">
-              <img
-                src="./images/img-2-9.jpg"
-                alt="ноутбук"
-                width="370"
-                height="294"
-              />
-              <h2 class="page-title">Growing Business</h2>
-              <p class="options">Додаток</p>
+             <a href="">
+               <div class="overlay">
+                <img
+                  src="./images/img-2-9.jpg"
+                  alt="ноутбук"
+                  width="370"
+                  height="294"
+                />
+                <p class="overlay-text">
+                  Ресурс пропонує комплексні пропозиції з різним рівнем
+                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
+                  вичерпні відомості про компанію чи приватну особу.
+                </p>
+              </div>
+              <div class="text-box">
+                <h2 class="page-title">Growing Business</h2>
+                <p class="options">Додаток</p>
+              </div>
+             </a>
             </li>
           </ul>
         </div>
