--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
           <li class="list-item">
             <a href="./portfolio.html" class="item">Портфоліо</a>
           </li>
-          <li class="list-item"><a href="#" class="item">Контакти</a></li>
+          <li class="list-item">
+            <a href="./contacts.html" class="item">Контакти</a>
+          </li>
         </ul>
         <ul class="auth-nav list">
           <li class="auth-item">
@@ -55,11 +57,24 @@
       </nav>
     </header>
     <main>
-      <!---------------------- hero ------------------------->
+      <!-------------------------- hero ------------------------->
       <section class="hero section">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button class="hero-btn" type="button">Замовити послугу</button>
+          <div>
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button class="hero-btn" type="button" data-modal-open>
+              Замовити послугу
+            </button>
+          </div>
+          <div class="backdrop is-hidden" data-modal>
+            <div class="modal">
+              <button class="close-btn" data-modal-close>
+                <svg class="icon-close" width="11px" height="11px">
+                  <use href="./images/icons.svg#icon-cross"></use>
+                </svg>
+              </button>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -125,10 +140,19 @@
       <section class="work section">
         <div class="container">
           <h2 class="work-title">Чим ми займаємося</h2>
-          <ul>
-            <li><img src="./images/box_1.jpg" alt="планшет" width="370" /></li>
-            <li><img src="./images/box_2.jpg" alt="ноутбук" width="370" /></li>
-            <li><img src="./images/box_3.jpg" alt="айпад" width="370" /></li>
+          <ul class="work-list">
+            <li class="work-item">
+              <img src="./images/box_1.jpg" alt="планшет" width="370" />
+              <p class="work-text">Десктопні додатки</p>
+            </li>
+            <li class="work-item">
+              <img src="./images/box_2.jpg" alt="ноутбук" width="370" />
+              <p class="work-text">Мобільні додатки</p>
+            </li>
+            <li class="work-item">
+              <img src="./images/box_3.jpg" alt="айпад" width="370" />
+              <p class="work-text">Дизайнерські рішення</p>
+            </li>
           </ul>
         </div>
       </section>
@@ -369,5 +393,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
