--- a/portfolio.html
+++ b/portfolio.html
@@ -84,7 +84,7 @@
         <div class="container">
           <ul class="gallery">
             <li class="example">
-              <a href="#">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
                   <img
                     src="./images/img-2-1.jpg"
@@ -105,7 +105,7 @@
               </a>
             </li>
             <li class="example">
-              <a href="">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
                   <img
                     src="./images/img-2-2.jpg"
@@ -126,7 +126,7 @@
               </a>
             </li>
             <li class="example">
-            <a href="">
+            <a href="#" class="overlay-link">
                 <div class="overlay">
                 <img
                   src="./images/img-2-3.jpg"
@@ -147,7 +147,7 @@
             </a>
             </li>
             <li class="example">
-              <a href="">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
                 <img
                   src="./images/img-2-4.jpg"
@@ -168,7 +168,7 @@
               </a>
             </li>
             <li class="example">
-          <a href="">
+          <a href="#" class="overlay-link">
                 <div class="overlay">
                 <img
                   src="./images/img-2-5.jpg"
@@ -189,7 +189,7 @@
           </a>
             </li>
             <li class="example">
-           <a href="">
+           <a href="#" class="overlay-link">
                <div class="overlay">
                 <img
                   src="./images/img-2-6.jpg"
@@ -210,7 +210,7 @@
            </a>
             </li>
             <li class="example">
-           <a href="">
+           <a href="#" class="overlay-link">
                <div class="overlay">
                 <img
                   src="./images/img-2-7.jpg"
@@ -231,7 +231,7 @@
            </a>
             </li>
             <li class="example">
-          <a href="">
+          <a href="#" class="overlay-link">
                 <div class="overlay">
                 <img
                   src="./images/img-2-8.jpg"
@@ -252,7 +252,7 @@
           </a>
             </li>
             <li class="example">
-             <a href="">
+             <a href="#" class="overlay-link">
                <div class="overlay">
                 <img
                   src="./images/img-2-9.jpg"
