--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
         </ul>
         <ul class="auth-nav list">
-          <li class="auth-item">
+          <li class="autFh-item">
             <a class="head-mail" href="mailto:info@devstudio.com">
               <svg class="icon-mail">
                 <use href="./images/icons.svg#icon-mail"></use>
