--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
           <h1 class="hidden-title">наші послуги</h1>
           <ul class="list-btn">
             <li class="item-btn">
-              <button type="button" class="serv-btn">Усі</button>
+              <button type="button" class="serv-btn current">Усі</button>
             </li>
             <li class="item-btn">
               <button type="button" class="serv-btn">Веб-сайти</button>
