--- a/portfolio.html
+++ b/portfolio.html
@@ -126,151 +126,151 @@
               </a>
             </li>
             <li class="example">
-            <a href="#" class="overlay-link">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
-                <img
-                  src="./images/img-2-3.jpg"
-                  alt="лого ресторану"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Ресторан Seafood</h2>
-                <p class="options">Додаток</p>
-              </div>
-            </a>
+                  <img
+                    src="./images/img-2-3.jpg"
+                    alt="лого ресторану"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Ресторан Seafood</h2>
+                  <p class="options">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="example">
               <a href="#" class="overlay-link">
                 <div class="overlay">
-                <img
-                  src="./images/img-2-4.jpg"
-                  alt="навушники"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Проєкт Prime</h2>
-                <p class="options">Маркетинг</p>
-              </div>
+                  <img
+                    src="./images/img-2-4.jpg"
+                    alt="навушники"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Проєкт Prime</h2>
+                  <p class="options">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="example">
-          <a href="#" class="overlay-link">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
-                <img
-                  src="./images/img-2-5.jpg"
-                  alt="пара коробок"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Проєкт Boxes</h2>
-                <p class="options">Додаток</p>
-              </div>
-          </a>
+                  <img
+                    src="./images/img-2-5.jpg"
+                    alt="пара коробок"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Проєкт Boxes</h2>
+                  <p class="options">Додаток</p>
+                </div>
+              </a>
             </li>
             <li class="example">
-           <a href="#" class="overlay-link">
-               <div class="overlay">
-                <img
-                  src="./images/img-2-6.jpg"
-                  alt="монітор"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Inspiration has no Borders</h2>
-                <p class="options">Веб-сайт</p>
-              </div>
-           </a>
-            </li>
-            <li class="example">
-           <a href="#" class="overlay-link">
-               <div class="overlay">
-                <img
-                  src="./images/img-2-7.jpg"
-                  alt="розгорнута книга"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Видання Limited Edition</h2>
-                <p class="options">Дизайн</p>
-              </div>
-           </a>
-            </li>
-            <li class="example">
-          <a href="#" class="overlay-link">
+              <a href="#" class="overlay-link">
                 <div class="overlay">
-                <img
-                  src="./images/img-2-8.jpg"
-                  alt="лейбл "
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Проєкт LAB</h2>
-                <p class="options">Маркетинг</p>
-              </div>
-          </a>
+                  <img
+                    src="./images/img-2-6.jpg"
+                    alt="монітор"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Inspiration has no Borders</h2>
+                  <p class="options">Веб-сайт</p>
+                </div>
+              </a>
             </li>
             <li class="example">
-             <a href="#" class="overlay-link">
-               <div class="overlay">
-                <img
-                  src="./images/img-2-9.jpg"
-                  alt="ноутбук"
-                  width="370"
-                  height="294"
-                />
-                <p class="overlay-text">
-                  Ресурс пропонує комплексні пропозиції з різним рівнем
-                  функціоналу та сервісів. Все це дозволить відвідувачу отримати
-                  вичерпні відомості про компанію чи приватну особу.
-                </p>
-              </div>
-              <div class="text-box">
-                <h2 class="page-title">Growing Business</h2>
-                <p class="options">Додаток</p>
-              </div>
-             </a>
+              <a href="#" class="overlay-link">
+                <div class="overlay">
+                  <img
+                    src="./images/img-2-7.jpg"
+                    alt="розгорнута книга"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Видання Limited Edition</h2>
+                  <p class="options">Дизайн</p>
+                </div>
+              </a>
+            </li>
+            <li class="example">
+              <a href="#" class="overlay-link">
+                <div class="overlay">
+                  <img
+                    src="./images/img-2-8.jpg"
+                    alt="лейбл "
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Проєкт LAB</h2>
+                  <p class="options">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+            <li class="example">
+              <a href="#" class="overlay-link">
+                <div class="overlay">
+                  <img
+                    src="./images/img-2-9.jpg"
+                    alt="ноутбук"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="overlay-text">
+                    Ресурс пропонує комплексні пропозиції з різним рівнем
+                    функціоналу та сервісів. Все це дозволить відвідувачу
+                    отримати вичерпні відомості про компанію чи приватну особу.
+                  </p>
+                </div>
+                <div class="text-box">
+                  <h2 class="page-title">Growing Business</h2>
+                  <p class="options">Додаток</p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
